--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "license": "MIT",
   "repository": "https://github.com/NoriSte/gatsby-plugin-iubenda-cookie-law",
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "babel-preset-gatsby-package": "^0.1.4",
+    "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0"
   },
   "config": {
@@ -24,6 +28,12 @@
   },
   "scripts": {
     "commit": "npx git-cz",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src --out-dir . --ignore **/__tests__",
+    "prepare": "cross-env NODE_ENV=production npm run build",
+    "watch": "babel -w src --out-dir . --ignore **/__tests__"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.4.3"
   }
 }
