--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,5 @@
 {
     "workbench.colorCustomizations": {
-        "editor.background": "#000",
-        "titleBar.activeBackground": "#1cc691",
-        "titleBar.inactiveBackground": "#1cc69199",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveForeground": "#15202b99"
+        "editor.background": "#000"
     }
 }
