ci: disable Travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ addons:
     packages:
       # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
       - libgconf-2-4
-cache:
-  # Caches $HOME/.npm when npm ci is default script command
-  # Caches node_modules in all other cases
-  npm: true
-  directories:
-    # we also need to cache folder with Cypress binary
-    - ~/.cache
+# cache:
+#   # Caches $HOME/.npm when npm ci is default script command
+#   # Caches node_modules in all other cases
+#   npm: true
+#   directories:
+#     # we also need to cache folder with Cypress binary
+#     - ~/.cache
 install:
   - npm install
 before_script:
