--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "commit": "npx git-cz",
-    "test": "node seqexec.js",
+    "test": "npm run build && npm run test:base-configuration-test && npm run test:gtm-test && npm run test:custom-gtm-test",
     "test:base-configuration-test": "cd test-projects/base-configuration-test && npm run test && cd ../..",
     "test:gtm-test": "cd test-projects/gtm-test && npm run test && cd ../..",
     "test:custom-gtm-test": "cd test-projects/custom-gtm-test && npm run test && cd ../..",
