--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,6 +16,17 @@
         "test",
         "doc"
       ]
+    }, {
+      "login": "pm990320",
+      "name": "Patrick Menlove",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/6690208?v=4",
+      "profile": "https://github.com/pm990320",
+      "contributions": [
+        "bug",
+        "code",
+        "review",
+        "test"
+      ]
     }
   ],
   "contributorsPerLine": 7,
