--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "@babel/runtime": "^7.4.3"
   },
   "peerDependencies": {
-    "gatsby": "^2.0.0 || ^3.0.0 || ^4.0.0"
+    "gatsby": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0"
   }
 }
